--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "fontello": "cd src/assets/fonts && make",
+    "fontello-save": "cd src/assets/fonts && make save",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "buefy": "^0.9.4",
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "fontello-cli": "^0.6.2",
+    "resolve-url-loader": "^3.1.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
@@ -30,9 +37,10 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^7.1.0",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.27.1"
   },
   "eslintConfig": {
     "root": true,
