--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^2.2.6",
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "fontello-cli": "^0.6.2",
+    "js-cookie": "^2.2.1",
     "resolve-url-loader": "^3.1.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
